Changelog 0.3.95 [20230722]:
- Added Hide Episode Info and Plot Setting
- Fix Scrolling Issue in Source Select

Changelog 0.3.94 [20230720]:
- Fix for Smartscroll 
- Fix for Anime Tosho

Changelog 0.3.93 [20230719]:
- Improved Nyaa Scrapping
- Added Anime Tosho Scrapper
- Added Manual Batch File Selection Setting
- Added Smart Episode Scrolling Setting

Changelog 0.3.92 [20230715]:
- Changed Gogoanime domain

Changelog 0.3.91 [20230714]:
- More improvements on Aniwatch search

Changelog 0.3.90 [20230713]:
- Improved Aniwatch search with romaji titles

Changelog 0.3.89 [20230712]:
- Added Aniwatch scraper
- Removed Animesaturn references 

Changelog 0.3.87 [20230710]:
- Used anify for zoro

Changelog 0.3.86 [20230701]:
- Fix 9anime scraper using anify

Changelog 0.3.85 [20230630]:
- Fix Animix Scraper
- Fix Gogo Scraper
- linting Changes

Changelog 0.3.84 [20230627]:
- Added Chiaki to get watch order
- Added New Context menu "Get Watch Order"
- Huge thanks to @Pahiro for adding this.

Changelog 0.3.83 [20230625]:
- No code changes, linting only

Changelog 0.3.82 [20230625]:
- New service to monitor settings changes
- Update global flag to indicate calendar requires a refresh
- Added dbargs to refresh the calendar

Changelog 0.3.81 [20230622]:
- Added CountryOfOrigin filter to "Airing Anime Calendar"
- Big Thanks to Pahiro for adding this filter.

Changelog 0.3.80 [20230607]:
- Added anilist id when searching simkl for episodes
- Added notification when meta database is rebuilt
- Disabled xstreamcdn in gogo

Changelog 0.3.79 [20230606]:
- Fixed a fallback property for Consumet
- Made a few episode meta changes

Changelog 0.3.78 [20230602]:
- Fixed Zoro scraper fails when there are no external subtitles
- Fixed Aanimepahe scraping when more than 30 episodes

Changelog 0.3.77 [20230528]:
- Added Animepahe Scraper

Changelog 0.3.76 [20230522]:
- Improved Skip Intro incase Aniskip Fails
- Made Nyaa easier to understand

Changelog 0.3.75 [20230520]: